infrastructure/kubernetes/base/nextjs/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextjs
  namespace: ecom-preprod

spec:
  selector:
    app: nextjs

  ports:
    - port: 80
      targetPort: 3000
